"Modify user signin and signup page [Finishes #157385247]"

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<div class= "form-container">
-			<h1 class="c-header">M-Tracker</h1>
+			<h1 class="c-header">Sign in</h1>
 			<div class="u-line"></div>
 			<form>
 				<div class="input-group">
@@ -21,7 +21,7 @@
 				</div>
 				<div class="input-group">
 					
-					<input type="submit" name="submit" value="Sign in"/>
+					<input type="submit" class= "btn" name="submit" value="Sign in"/>
 					    <p>Do not have an account?&nbsp;<a href="signup.html">Sign up</a><br>
 					  <a href="#">Forgot Password</a></p>
 				</div>
