--- a/UI/signup.html
+++ b/UI/signup.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<div class= "form-container">
-			<h1 class="c-header">M-Tracker</h1>
+			<h1 class="c-header">Sign Up</h1>
 			<div class="u-line"></div>
 			<form>
 				<div class="input-group">
@@ -28,7 +28,7 @@
 				</div>
 				
 				<div class="input-group">
-					<input type="submit" name="submit" value="Sign up"/>
+					<input type="submit" class= "btn" name="submit" value="Sign up"/>
 					    <p>Already have an account?&nbsp;<a href="signin.html">Sign in</a><br>
 					  <a href="#">Forgot Password</a></p>
 				</div>
