--- a/UI/signup.html
+++ b/UI/signup.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<div class= "form-container">
-			<h1 class="c-header">Sign Up</h1>
+			<h1 class="header c-header">Sign Up</h1>
 			<div class="u-line"></div>
 			<form>
 				<div class="input-group">
