[Finishes #157385247] Modify user signup and signin page

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -14,10 +14,10 @@
 			<div class="u-line"></div>
 			<form>
 				<div class="input-group">
-					<label for="email">Email: </label>
-					<input type="email" name="email"/><br>
+					<label for="email">E-mail: </label>
+					<input type="email" name="email" placeholder="Enter a valid E-mail"/><br>
 					<label for="password">Password: </label>
-					<input type="password" name="password"/>
+					<input type="password" name="password" placeholder="Enter your password"/>
 				</div>
 				<div class="input-group">
 					
