--- a/UI/signup.html
+++ b/UI/signup.html
@@ -10,21 +10,21 @@
 <body>
 	<div class="container">
 		<div class= "form-container">
-			<h1 class="header c-header">Sign Up</h1>
+			<h1 class="header c-header">Sign up</h1>
 			<div class="u-line"></div>
 			<form>
 				<div class="input-group">
 					<label for="username">Username: </label>
-					<input type="text" name="username"/>
+					<input type="text" name="username" placeholder="Enter a username"/>
 					<br>
 					<label for="email">Email: </label>
-					<input type="email" name="email"/>
+					<input type="email" name="email" placeholder="Enter a valid E-mail"/>
 					<br>
 					<label for="password">Password: </label>
-					<input type="password" name="password"/>
+					<input type="password" name="password" placeholder="Enter your password"/>
 					<br>
 					<label for="confirmPwd">Confirm Password: </label>
-					<input type="password" name="confirmPwd"/>
+					<input type="password" name="confirmPwd" placeholder="Confirm your password"/>
 				</div>
 				
 				<div class="input-group">
