--- a/UI/admin-Allrequests.html
+++ b/UI/admin-Allrequests.html
@@ -2,64 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Maintenance-Tracker UI</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
 <div id="top-header">
-	<a class="left brand" href="index.html">M-Tracker</a>
-	<a class="right" href="index.html">Logout</a>
+    <a class="left brand" href="index.html">M-Tracker</a>
+    <a class="right" href="index.html">Logout</a>
 </div>
 
-<div>
-	<h1 class="header l-header">All Requests</h1>
-		<div class="u-line"></div>
+<div class="container">
+    <h1 class="header l-header">All Requests</h1>
+    <div class="u-line"></div>
 
-<div class="list">
-	<div>
-  		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-		</p>
-		<a href="#" class="btn">View details</a>
-	</div>  
-	<div>
-  		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-		</p>
-		<a href="#" class="btn">View details</a>
-	</div> 
-	<div>
-  		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-		</p>
-		<a href="#" class="btn">View details</a>
-	</div> 
-	<div>
-  		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-		</p>
-		<a href="#" class="btn">View details</a>
-	</div> 
-	<div>
-  		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-		</p>
-		<a href="#" class="btn">View details</a>
-	</div> 
-	<div>
-  		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-		</p>
-		<a href="#" class="btn">View details</a>
-	</div> 
+    <div class="list">
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+            </p>
+            <a href="#" class="btn">View details</a>
+        </div>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+            </p>
+            <a href="#" class="btn">View details</a>
+        </div>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+            </p>
+            <a href="#" class="btn">View details</a>
+        </div>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+            </p>
+            <a href="#" class="btn">View details</a>
+        </div>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+            </p>
+            <a href="#" class="btn">View details</a>
+        </div>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+            </p>
+            <a href="#" class="btn">View details</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
